[package]
name = "scene_release"
version = "0.1.0"
edition = "2021"
authors = [""]
description = "A library for parsing scene release names into simpler, reusable data"
license = "WTFPL"
repository = "https://github.com/hiddenpdx/scene-release"

[dependencies]
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]

